IN-124 refactor: update profile flow

--- a/src/feature/profile/ui/GeneralInformation/GeneralInformation.module.scss
+++ b/src/feature/profile/ui/GeneralInformation/GeneralInformation.module.scss
@@ -1,17 +1,3 @@
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  justify-content: center;
-
-  background-color: transparent;
-  border: none;
-}
-
-.link {
-  text-decoration: underline;
-}
-
-.submit {
-  align-self: flex-end;
+.root {
+  padding: 24px 0;
 }
