--- a/src/feature/profile/ui/EditProfileForm/EditProfileForm.module.scss
+++ b/src/feature/profile/ui/EditProfileForm/EditProfileForm.module.scss
@@ -17,3 +17,12 @@
 .submit {
   align-self: flex-end;
 }
+
+.field {
+  & label {
+    &::after {
+      content: '*';
+      color: var(--danger-500);
+    }
+  }
+}
