hotfix: links styles in forms

--- a/src/feature/auth/ui/ForgotPasswordForm/ForgotPasswordForm.module.scss
+++ b/src/feature/auth/ui/ForgotPasswordForm/ForgotPasswordForm.module.scss
@@ -1,8 +1,10 @@
 @import '@/app/styles/mixins';
 
 .card {
+  display: flex;
+  flex-direction: column;
   width: 378px;
-  padding: 23px 24px 36px;
+  padding: 24px;
 }
 
 .textField {
@@ -24,18 +26,14 @@
 }
 
 .link {
+  align-self: center;
   order: 2;
-  width: 100%;
   margin: 24px auto;
 }
 
 .recaptcha {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  align-self: center;
   order: 3;
-
-  padding: 14px 20px;
 }
 
 @include mobile-small {
