--- a/src/widgets/header/ui/Header/Header.module.scss
+++ b/src/widgets/header/ui/Header/Header.module.scss
@@ -11,7 +11,7 @@
 
   width: 100%;
   height: var(--header-height);
-  padding: 0.75rem 3.75rem;
+  padding: 0.75rem 0;
 
   background-color: var(--dark-700);
   border-bottom: 1px solid var(--dark-300);
@@ -21,7 +21,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   width: 100%;
+  padding: 0 var(--container-padding);
 }
 
 .logo {
