--- a/src/widgets/sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -1,7 +1,7 @@
 .item {
   all: unset;
   cursor: pointer;
-  padding: 0.75rem 3rem;
+  padding: 0.75rem 2rem 0.75rem 0;
   transition: color 0.2s linear;
 
   &:hover {
