hotfix(IN-119): logout & confirm dialogs markup & styles

--- a/src/feature/auth/ui/LogoutDialog/LogoutDialog.module.scss
+++ b/src/feature/auth/ui/LogoutDialog/LogoutDialog.module.scss
@@ -2,7 +2,7 @@
   justify-content: start;
 
   margin-top: auto;
-  padding: 0.75rem 3rem;
+  padding: 0.75rem 2rem 0.75rem 0;
 
   font-size: var(--font-size-s);
   font-weight: var(--font-weight-medium);
