--- a/src/widgets/dialogs/ui/ConfirmDialog/ConfirmDialog.module.scss
+++ b/src/widgets/dialogs/ui/ConfirmDialog/ConfirmDialog.module.scss
@@ -1,7 +1,9 @@
 .dialog {
   display: flex;
   flex-direction: column;
-  width: 378px;
+
+  width: 100%;
+  max-width: 378px;
   padding: 30px 24px 36px;
 
   &:last-child {
