--- a/src/widgets/sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/sidebar/ui/Sidebar/Sidebar.module.scss
@@ -4,6 +4,7 @@
 
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
 
   width: 13.75rem;
   height: calc(100vh - var(--header-height));
