--- a/src/shared/ui/Dialog/Dialog.module.scss
+++ b/src/shared/ui/Dialog/Dialog.module.scss
@@ -5,6 +5,12 @@
   animation: overlayshow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
+.arrowBtn {
+  color: var(--light-100);
+  margin: 0;
+  padding: 0;
+}
+
 .title {
   display: flex;
   align-items: center;
@@ -16,7 +22,7 @@
   border-bottom: 1px solid var(--dark-100);
 
   & .titleText {
-    margin: 0;
+    margin: 0 190px 0 0;
     padding: 0;
 
     font-size: var(--font-size-xl);
@@ -41,6 +47,8 @@
 .closeIcon {
   color: var(--light-100);
   cursor: pointer;
+  width: 24px;
+  height: 24px;
 }
 
 @keyframes overlayshow {
