--- a/src/feature/post/ui/EditPost/EditPost.module.scss
+++ b/src/feature/post/ui/EditPost/EditPost.module.scss
@@ -10,10 +10,10 @@
 
 .editPostArea {
   width: 100%;
+}
 
-  & > textarea {
-    height: 120px;
-  }
+.editPostArea textarea {
+  height: 120px;
 }
 
 .valueLength {
@@ -25,7 +25,7 @@
 .blockArea {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
   width: 100%;
 }
 
