IN-133 feat: add Comment, HeaderPostComments, PostComments, PostDetails, PostInfo, PublishCommentForm.

--- a/src/entities/post/ui/UserBanner/UserBanner.module.scss
+++ b/src/entities/post/ui/UserBanner/UserBanner.module.scss
@@ -2,10 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-  padding: 24px;
-
-  background-color: var(--dark-300);
+  padding: 11px 24px;
 }
 
 .userInfo {
