--- a/src/widgets/sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,14 +1,11 @@
 .sidebar {
-  position: sticky;
-  top: var(--header-height);
-
   display: flex;
   flex-direction: column;
-  flex-shrink: 0;
 
-  width: 13.75rem;
+  width: 100%;
+  max-width: 14.3rem;
   height: calc(100vh - var(--header-height));
-  padding: 4.5rem 0 2.25rem var(--container-padding);
+  padding: 4.5rem 0 2.25rem;
 
   background-color: var(--dark-700);
   border-right: 1px solid var(--dark-300);
