IN-138 feat: add posts preview + modals for edit & delete post

--- a/src/feature/comment/ui/PublishCommentForm/PublishCommentForm.module.scss
+++ b/src/feature/comment/ui/PublishCommentForm/PublishCommentForm.module.scss
@@ -11,6 +11,8 @@
   padding: 0;
   outline: unset;
 
+  &:focus,
+  &:active:not(:disabled),
   &:hover:not(:disabled, :focus-visible, .error) {
     outline: unset;
   }
