--- a/src/feature/post/ui/EditPostForm/EditPostForm.module.scss
+++ b/src/feature/post/ui/EditPostForm/EditPostForm.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0 24px 24px;
+  padding: 12px 24px 24px;
 }
 
 .area {
