--- a/src/feature/post/ui/PostDetails/PostDetails.module.scss
+++ b/src/feature/post/ui/PostDetails/PostDetails.module.scss
@@ -1,7 +1,7 @@
 @import '@/app/styles/mixins';
 
 .postDetails {
-  display: inline-grid;
+  display: grid;
   grid-template-areas:
     'slider header'
     'slider content'
@@ -42,5 +42,6 @@
 
   .slider {
     height: 324px;
+    border: none;
   }
 }
