--- a/src/feature/post/ui/CropperPost/CropperPost.module.scss
+++ b/src/feature/post/ui/CropperPost/CropperPost.module.scss
@@ -1,7 +1,15 @@
 .container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.wrapper {
   position: relative;
   width: 100%;
   height: 100%;
+}
+.extendedWrapper {
+  width: 50%;
 }
 
 .save {
@@ -13,31 +21,21 @@
   padding: 0;
 }
 
-.wrapper {
-  display: flex;
-}
-
-.slide {
-  .splideSlide {
-    position: relative;
-    width: 100%;
-    height: 503px;
-  }
-}
-
-.secondWindow {
-  width: 400px;
-  height: 100%;
-}
 .imagesArrayBtn {
   position: absolute;
   right: 11px;
   bottom: 11px;
   z-index: 1;
 }
+
 .expandBtn {
   position: absolute;
   bottom: 11px;
   left: 11px;
   z-index: 1;
+}
+
+.filterWindow {
+  width: 400px;
+  height: 100%;
 }
