--- a/src/feature/post/ui/CropperPost/CropperPost.module.scss
+++ b/src/feature/post/ui/CropperPost/CropperPost.module.scss
@@ -35,6 +35,13 @@
   z-index: 1;
 }
 
+.zoomInBtn {
+  position: absolute;
+  bottom: 11px;
+  left: 71px;
+  z-index: 1;
+}
+
 .filterWindow {
   width: 400px;
   height: 100%;
