--- a/src/widgets/sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -12,8 +12,8 @@
 .button {
   display: flex;
   align-items: center;
-
-  max-width: 100%;
+  justify-content: start;
+  width: 100%;
   margin: 0;
   padding: 0;
 
