--- a/src/entities/post/ui/ZoomIn/ZoomIn.module.scss
+++ b/src/entities/post/ui/ZoomIn/ZoomIn.module.scss
@@ -1,26 +1,18 @@
-.expandContainer {
+.zoomInContainer {
   position: absolute;
 
   bottom: 38px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  width: 156px;
-  height: 152px;
-  padding: 10px 16px 10px 12px;
+  align-items: center;
+  justify-content: center;
+  width: 124px;
+  height: 36px;
 
   background-color: rgba(#171717, 0.8);
   border-radius: 2px;
 }
 
-.expandWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.expandBtn {
+.zoomInBtn {
   width: 36px;
   height: 36px;
   margin: 0;
@@ -39,4 +31,16 @@
 
 .squareBtn {
   padding: 0;
+}
+
+.slider {
+  width: 100px;
+}
+.sliderTrackClass {
+  height: 2px;
+}
+.sliderThumbClass {
+  width: 6px;
+  height: 6px;
+  box-shadow: 0 0 0 3px var(--primary-500);
 }
