--- a/src/widgets/sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -12,7 +12,8 @@
 .button {
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
+
   width: 100%;
   margin: 0;
   padding: 0;
