--- a/src/entities/post/ui/ExpandBtn/ExpandBtn.module.scss
+++ b/src/entities/post/ui/ExpandBtn/ExpandBtn.module.scss
@@ -1,42 +1,23 @@
-.expandContainer {
-  position: absolute;
-
-  bottom: 38px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  width: 156px;
-  height: 152px;
-  padding: 10px 16px 10px 12px;
-
-  background-color: rgba(#171717, 0.8);
-  border-radius: 2px;
-}
-
-.expandWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.viewport {
+  background-color: rgba(#171717, 0.7); // dark-500
+  border: none;
 }
 
 .expandBtn {
-  width: 36px;
-  height: 36px;
-  margin: 0;
-  padding: 0;
+  padding: 6px;
+  color: var(--light-100);
+  background-color: rgba(#171717, 0.7); // dark-500
 
-  background-color: rgba(#171717, 0.7);
-
-  .isOpenIcon {
+  &[data-state='open'] {
     color: var(--primary-500);
-  }
-
-  &:hover {
-    background-color: rgba(#171717, 0.8);
   }
 }
 
-.squareBtn {
-  padding: 0;
+.item {
+  justify-content: space-between;
+  color: var(--light-900);
+}
+
+.activeItem {
+  color: var(--light-100);
 }
