--- a/src/shared/ui/Dialog/Dialog.module.scss
+++ b/src/shared/ui/Dialog/Dialog.module.scss
@@ -5,12 +5,6 @@
   animation: overlayshow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
-.arrowBtn {
-  margin: 0;
-  padding: 0;
-  color: var(--light-100);
-}
-
 .title {
   display: flex;
   align-items: center;
@@ -37,6 +31,8 @@
 
 .closeIcon {
   cursor: pointer;
+  width: 24px;
+  height: 24px;
   color: var(--light-100);
 }
 
