--- a/src/widgets/layout/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/layout/ui/SidebarItem/SidebarItem.module.scss
@@ -1,12 +1,26 @@
 .item {
   all: unset;
   cursor: pointer;
-  padding: 0.75rem 3rem;
+  padding: 0.75rem 2rem 0.75rem 0;
   transition: color 0.2s linear;
 
   &:hover {
     color: var(--primary-100);
   }
+}
+
+.disabled {
+  pointer-events: none;
+  color: var(--dark-100);
+}
+
+.full {
+  gap: 0.75rem;
+}
+
+.active {
+  font-weight: var(--font-weight-bold);
+  color: var(--primary-500);
 }
 
 .button {
@@ -24,20 +38,6 @@
   &:focus-visible {
     border-radius: 2px;
   }
-
-  &.disabled {
-    pointer-events: none;
-    color: var(--dark-100);
-  }
-
-  &.full {
-    gap: 0.75rem;
-  }
-
-  &.active {
-    font-weight: var(--font-weight-bold);
-    color: var(--primary-500);
-  }
 }
 
 .link {
@@ -49,20 +49,6 @@
   &:focus-visible {
     border-radius: 2px;
     outline: 2px solid var(--primary-500);
-  }
-
-  &.disabled {
-    pointer-events: none;
-    color: var(--dark-100);
-  }
-
-  &.full {
-    gap: 0.75rem;
-  }
-
-  &.active {
-    font-weight: var(--font-weight-bold);
-    color: var(--primary-500);
   }
 }
 
