--- a/src/shared/ui/PhotoUploader/PhotoUploader.module.scss
+++ b/src/shared/ui/PhotoUploader/PhotoUploader.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 72px 24px;
+  padding: 72px 24px 48px;
 
   &.error {
     padding-top: 0;
