hotfix: add error catching, pessimistic update for create post
Add translates, refactor markup & styles

--- a/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
+++ b/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   gap: 38px;
   align-items: flex-start;
+  margin-bottom: 48px;
 }
 
 .info {
@@ -10,6 +11,13 @@
   flex-grow: 1;
   gap: 20px;
   align-items: flex-start;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .name {
