--- a/src/widgets/layout/ui/PublicLayout/PublicLayout.module.scss
+++ b/src/widgets/layout/ui/PublicLayout/PublicLayout.module.scss
@@ -1,3 +1,12 @@
+@import '@/app/styles/mixins';
+
 .main {
   margin: 0 auto;
+  padding: 36px 154px;
+}
+
+@include mobile-small {
+  .main {
+    padding: 24px 15px;
+  }
 }
