init: add users public page

--- a/src/entities/post/ui/PostsList/PostsList.module.scss
+++ b/src/entities/post/ui/PostsList/PostsList.module.scss
@@ -8,3 +8,14 @@
 
   margin-top: 12px;
 }
+
+@include mobile {
+  .PostsList {
+    grid-template-columns: repeat(3, 1fr);
+
+    .size {
+      width: 108px;
+      height: 108px;
+    }
+  }
+}
