--- a/src/entities/post/ui/ZoomIn/ZoomIn.module.scss
+++ b/src/entities/post/ui/ZoomIn/ZoomIn.module.scss
@@ -1,5 +1,28 @@
+.viewport {
+  background-color: rgba(#171717, 0.7); // dark-500
+  border: none;
+}
+
 .expandBtn {
   padding: 6px;
   color: var(--light-100);
   background-color: rgba(#171717, 0.7); // dark-500
+
+  &[data-state='open'] {
+    color: var(--primary-500);
+  }
+}
+
+.item {
+  cursor: initial;
+}
+
+.sliderTrackClass {
+  height: 3px;
+}
+
+.sliderThumbClass {
+  width: 7px;
+  height: 7px;
+  box-shadow: 0 0 0 4px var(--primary-500);
 }
