--- a/src/entities/post/ui/PostPreviewCard/PostPreviewCard.module.scss
+++ b/src/entities/post/ui/PostPreviewCard/PostPreviewCard.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .image {
   cursor: pointer;
 
@@ -21,3 +23,13 @@
     }
   }
 }
+
+
+@include mobile {
+  .image {
+    width: 100%;
+    height: 100%;
+    padding-top: 100%;
+  }
+}
+
