--- a/src/widgets/layout/ui/Header/Header.module.scss
+++ b/src/widgets/layout/ui/Header/Header.module.scss
@@ -37,6 +37,7 @@
   justify-content: flex-end;
 }
 
+
 .login {
   margin-left: 2.25rem;
 }
@@ -45,20 +46,29 @@
   margin-left: 1.5rem;
 }
 
-/* .lang {
-  display: flex;
-}
-
-.langMobile {
+.mobile {
   display: none;
 }
 
-@include mobile-small {
-  .lang {
+@include mobile {
+  .content {
+    padding: 12px 18px;
+  }
+
+  .pc {
     display: none;
   }
 
-  .langMobile {
+  .mobile {
     display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-left: 24px;
+    padding: 0;
+
+    color: var(--light-100);
   }
-} */
+}
+
+
