IN-205 refactor: after review

--- a/src/entities/post/ui/PublicPostsList/PublicPostsList.module.scss
+++ b/src/entities/post/ui/PublicPostsList/PublicPostsList.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 36px;
-  justify-content: space-evenly;
+  justify-content: space-between;
 
   width: 100%;
 }
