IN-206 refactor: after review

--- a/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
+++ b/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
@@ -18,6 +18,7 @@
     grid-area: aboutMe;
 
     text-overflow: ellipsis;
+    word-break: break-all;
 
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
