IN-203 feature: Add PublicPost

--- a/src/entities/post/ui/PublicPostsList/PublicPostsList.module.scss
+++ b/src/entities/post/ui/PublicPostsList/PublicPostsList.module.scss
@@ -1,8 +1,8 @@
 .posts {
   display: flex;
   flex-wrap: wrap;
-  gap: 36px;
-  justify-content: space-between;
+  gap: 12px;
+  justify-content: center;
 
   width: 100%;
 }
