--- a/src/entities/post/ui/PostsListSeketon/PostsListSkeleton.module.scss
+++ b/src/entities/post/ui/PostsListSeketon/PostsListSkeleton.module.scss
@@ -1,8 +1,19 @@
-.list {
+@import '@/app/styles/mixins';
+
+.postsListSkeleton {
   display: grid;
   grid-auto-rows: min-content;
   grid-template-columns: repeat(4, 1fr);
   gap: 12px;
 
   margin-top: 12px;
+}
+
+@include mobile {
+  .postsListSkeleton {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .hidden {
+    display: none;
+  }
 }
