--- a/src/widgets/layout/ui/PublicLayout/PublicLayout.module.scss
+++ b/src/widgets/layout/ui/PublicLayout/PublicLayout.module.scss
@@ -1,9 +1,9 @@
 @import '@/app/styles/mixins';
 
 .main {
-  max-width: 920px;
+  max-width: 992px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 36px 10px;
 }
 
 .back {
