feat: add responsive markup for sidebar & layout & profile

--- a/src/entities/post/ui/PostsList/PostsList.module.scss
+++ b/src/entities/post/ui/PostsList/PostsList.module.scss
@@ -13,12 +13,15 @@
   display: none;
 }
 
-@include mobile {
+@include pc {
   .list {
     grid-template-columns: repeat(3, 1fr);
   }
 
   .hidden {
     display: grid;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
   }
 }
