--- a/src/widgets/layout/ui/SidebarLayout/SidebarLayout.module.scss
+++ b/src/widgets/layout/ui/SidebarLayout/SidebarLayout.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .wrapper {
   display: flex;
 }
@@ -5,4 +7,10 @@
 .main {
   flex-grow: 1;
   padding: 36px var(--container-padding) 36px 24px;
+}
+
+@include tablet {
+  .main {
+    padding: 36px 18px calc(var(--header-height) + 36px);
+  }
 }
