--- a/src/entities/post/ui/PostInfoAdditional/PostInfoAdditional.module.scss
+++ b/src/entities/post/ui/PostInfoAdditional/PostInfoAdditional.module.scss
@@ -2,6 +2,7 @@
 
 .postInfo {
   padding: 12px 24px 7px;
+  border-bottom: 1px solid var(--dark-100);
 }
 
 .firstIcons {
@@ -51,5 +52,9 @@
 @include mobile {
   .messageBtn {
     display: inline-flex;
+  }
+
+  .likesCount {
+    font-size: 14px;
   }
 }
