--- a/src/entities/comment/ui/CommentsList/CommentsList.module.scss
+++ b/src/entities/comment/ui/CommentsList/CommentsList.module.scss
@@ -8,7 +8,6 @@
   height: 336px;
   padding: 24px;
 
-  border-top: 1px solid var(--dark-100);
   border-bottom: 1px solid var(--dark-100);
 }
 
@@ -16,5 +15,9 @@
   .comments {
     height: unset;
     border-bottom: unset;
+
+    .hidden {
+      display: none;
+    }
   }
 }
