--- a/src/widgets/post/ui/PostDetailsDialogs/PostDetailsDialogs.module.scss
+++ b/src/widgets/post/ui/PostDetailsDialogs/PostDetailsDialogs.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .dialog {
   width: 100%;
   max-width: 972px;
@@ -33,4 +35,16 @@
 
   width: 24px;
   height: 24px;
+}
+
+@include mobile {
+  .dialog {
+    height: calc(100vh - var(--header-height));
+    margin-top: 28px;
+    background-color: var(--dark-700);
+  }
+
+  .dialogClose {
+    display: none;
+  }
 }
