--- a/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
+++ b/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
@@ -7,8 +7,7 @@
     'avatar   settings'
     'avatar subscriber'
     'avatar    aboutMe'
-    'name            .'
-;
+    'name            .';
   gap: 20px 38px;
 
   margin-bottom: 48px;
