feat: add mobile header settings

--- a/src/feature/auth/ui/LogoutDialog/LogoutDialog.module.scss
+++ b/src/feature/auth/ui/LogoutDialog/LogoutDialog.module.scss
@@ -1,3 +1,6 @@
+@import '@/app/styles/mixins';
+
+
 .logout {
   justify-content: start;
 
@@ -12,4 +15,12 @@
 
 .email {
   font-weight: var(--font-weight-bold);
+}
+
+@include mobile {
+  .logout {
+    margin-top: unset;
+    padding: unset;
+
+  }
 }
